# ffxiv-item-name-database-resources

./: .gitignore  Makefile  README.md  pyproject.toml  template.yml
.circleci/: config.yml
