[tool.poetry]
name = "ffxiv-item-name-database-resources"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
awscli = "^1.17.9"
boto3 = "^1.11.9"
aws-sam-cli = "^0.43.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
